<resources>
    <string name="app_name">Skugga</string>
    <string name="title_activity_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="settings_endpoint_summary">Upd URL. Should not end by /</string>
    <string name="settings_endpoint_title">Endpoint</string>
    <string name="settings_secret_title">Secret</string>
    <string name="settings_secret_summary">Authentication secret. Optional.</string>
    <string name="settings_category_server">Server settings</string>
    <string name="action_file_popup_open">Open in browser</string>
    <string name="action_file_popup_copy_url">Copy URL</string>
    <string name="action_file_popup_delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="select_file_to_upload">Select A File</string>
    <string name="settings_high_priority_summary">High priority notification appears as Heads-Up on Lollipop and upper</string>
    <string name="settings_high_priority_title">Notify with high priority</string>
    <string name="settings_insecure_ssl_summary">If unchecked, certificate validity will not be enforced</string>
    <string name="settings_insecure_ssl_title">Allow insecure SSL</string>
    <string name="uploading">Uploading…</string>
    <string name="notif_upload_success">"File uploaded:\n"</string>
    <string name="notif_upload_failed">File upload failed :(</string>
    <string name="notif_cta_open">Open</string>
    <string name="notif_cta_copy">Copy</string>
    <string name="copy_toast">URL copied to clipboard</string>
    <string name="no_filename">No filename</string>
    <string name="title_activity_power_save_upload">PowerSaveUploadActivity</string>
    <string name="power_save_warning_text">Uploading...\n\nNote: You\'re seeing this because your device is in power saving mode.\nPlease wait until the upload is finished before closing this window, progress can be tracked in the notification as usual.</string>
</resources>
