<!--
  ~ Copyright 2015 - The Skugga Project
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_category_server">
        <EditTextPreference
            android:key="server_endpoint"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/settings_endpoint_summary"
            android:title="@string/settings_endpoint_title"/>

        <EditTextPreference
            android:key="server_secret"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/settings_secret_summary"
            android:title="@string/settings_secret_title"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="server_allow_insecure_ssl"
            android:summary="@string/settings_insecure_ssl_summary"
            android:title="@string/settings_insecure_ssl_title"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="User interface">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="ui_notification_high_priority"
            android:summary="@string/settings_high_priority_summary"
            android:title="@string/settings_high_priority_title"/>
    </PreferenceCategory>
</PreferenceScreen>
